[package]
name = "near-rewards"
version = "0.1.0"
authors = ["Bohdan Khorolets <bogdan@khorolets.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.7.1"
dirs = "3.0.1"
futures = "0.3.5"
request = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
near-sdk = "2.0.0"
base64 = "0.13.0"
uint = { version = "0.8.3", default-features = false }
clap = "3.0.0-beta.1"
prettytable-rs = "^0.8"
