[package]
name = "near-rewards"
version = "0.5.1"
authors = ["Bohdan Khorolets <b@khorolets.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
borsh = "0.7.1"
clap = "3.0.0-beta.1"
colored = "2"
dirs = "3.0.1"
futures = "0.3.5"
near-sdk = "2.0.0"
prettytable-rs = "^0.8"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tokio = { version = "0.2", features = ["full"] }
uint = { version = "0.8.3", default-features = false }
