[package]
name = "near-rewards"
version = "0.6.1"
authors = ["Bohdan Khorolets <b@khorolets.com>"]
edition = "2018"

[dependencies]
base64 = "0.21.0"
borsh = "0.10.3"
clap = { version = "4.2.7", features = ["derive"] }
colored = "2"
dirs = "3.0.1"
futures = "0.3.28"
near-sdk = "4.1.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
uint = { version = "0.9.5", default-features = false }